--- a/menu_lt.css
+++ b/menu_lt.css
@@ -32,6 +32,7 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }img:hover{
   transform: scale(1.2);
   box-shadow: 0px 0px 10px #e10087;
